# kg-cicada

./: .gitignore  Jenkinsfile  README.md  build.gradle  semantic-build-versioning.gradle  settings.gradle
.github/workflows/: docker-image.yml  gradle.yml
aigc/gemini/: prompt.py
archieve/: pom.xml
buildSrc/: build.gradle
config/checkstyle/: checkstyle.xml  suppressions.xml
docs/: Data_mess.md  IBM Cloud Service.md  Ingestion_event_message.json  Jenkins_deploy_cpd_via_fyre.md  LeetCode.md  NFS_Installation_ubuntu.md  Optimization (运筹优化) Courses.md  Personal_Resume_CN.md  Secure_connection_to_CP4D.md  Semantic_augument_rabbitmq_message.json  Semantic_search_dev.md  Semantic_search_use_cases.md  index.html
docs/propmt/: resume.md
docs/resumes/: Personal_Resume_Arch_CN.md  Personal_Resume_CN.md  Personal_Resume_CN_new.md  Personal_Resume_EN_new.md  Personal_Resume_En.md
docs/technical/: Data_mess.md  ERGO_query_result.json  How_To_Apply_License.md  Java_EE.md  (+4 more)
gradle/: libs.versions.toml
httpd/: Dockerfile  README.md
kubernetes/: Dockerfile  Dockerfile.kg  build-image.sh  build-janusgraph.sh  docker-compose.yml  kg-export-deploy.yaml  kg-ingestion-service.yaml  opensearch.sh  start.sh  wkc-pvc.yaml
neo4j/: pom.xml
pyproject/airflow-demo/: LICENSE.txt  README.md  airflow_install.sh  pyproject.toml
pyproject/airflow-demo/src/airflow_demo/: __about__.py  basic_pipeline.py
pyproject/airflow-demo/tests/: __init__.py
scripts/: README.md  app_test.py  binary_tree.py  catalog_export.json  catalog_export_status.json  dump-catagory.groovy  dump-catalog-graph.groovy  environments.ini  ergo-jg-api.jmx  ergo-query.csv  init-graph.groovy  java-massif.sh  launch.sh  query_by_id.rq  requirements.txt  rmq-sink.yaml  start_bucket.sh  start_catalog.sh  start_sq_analyze.sh  uml_convert.sh  wkc.py  wkc_import.py
spring-core-lab/: .gitignore  settings.gradle
(+287 files in other folders)
